--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "webpack template",
   "main": "index.js",
   "scripts": {
-    "build": "webpack"
+    "dev": "webpack --config ./build/webpack.dev.js",
+    "build": "webpack --config ./build/webpack.prod.js"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,7 @@
   "devDependencies": {
     "html-webpack-plugin": "^5.3.1",
     "webpack": "^5.37.0",
-    "webpack-cli": "^4.7.0"
+    "webpack-cli": "^4.7.0",
+    "webpack-merge": "^5.8.0"
   }
 }
