--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "webpack template",
   "main": "index.js",
   "scripts": {
+    "start": "webpack serve --config ./build/webpack.dev.js",
     "dev": "webpack --config ./build/webpack.dev.js",
     "build": "webpack --config ./build/webpack.prod.js"
   },
@@ -21,6 +22,7 @@
     "html-webpack-plugin": "^5.3.1",
     "webpack": "^5.37.0",
     "webpack-cli": "^4.7.0",
+    "webpack-dev-server": "^3.11.2",
     "webpack-merge": "^5.8.0"
   }
 }
