--- a/package.json
+++ b/package.json
@@ -23,7 +23,11 @@
   },
   "homepage": "https://github.com/vanholme/WebpackTemplate#readme",
   "devDependencies": {
+    "@babel/core": "^7.14.5",
+    "@babel/plugin-proposal-class-properties": "^7.14.5",
+    "@babel/preset-env": "^7.14.5",
     "autoprefixer": "^10.2.6",
+    "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "css-loader": "^5.2.6",
     "css-mqpacker": "^7.0.0",
