--- a/package.json
+++ b/package.json
@@ -33,9 +33,13 @@
     "css-mqpacker": "^7.0.0",
     "cssnano": "^5.0.6",
     "html-webpack-plugin": "^5.3.1",
+    "html-webpack-template-pug": "^1.1.1",
     "mini-css-extract-plugin": "^1.6.0",
     "node-sass": "^6.0.0",
     "postcss-loader": "^5.3.0",
+    "pug": "^3.0.2",
+    "pug-html-loader": "^1.1.5",
+    "pug-loader": "^2.4.0",
     "sass-loader": "^12.0.0",
     "style-loader": "^2.0.0",
     "webpack": "^5.37.0",
